<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<groupId>de.fraunhofer.iais.eis.ids</groupId>
	<artifactId>mdm-connector</artifactId>
	<version>4.0.2-SNAPSHOT</version>

	<modelVersion>4.0.0</modelVersion>

	<properties>
		<ids-components.version>4.0.2-SNAPSHOT</ids-components.version>
		<ids-infomodel.version>4.0.2-SNAPSHOT</ids-infomodel.version>
		<ids-serializer.version>4.0.2-SNAPSHOT</ids-serializer.version>
		<spring.version>5.1.3.RELEASE</spring.version>
		<spring-boot.version>2.0.6.RELEASE</spring-boot.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-boot.run.main-class>de.fraunhofer.iais.eis.ids.connector.main.Main</spring-boot.run.main-class>
	</properties>

	<dependencies>
		<!-- IDS Components -->
		<dependency>
			<groupId>de.fraunhofer.iais.eis.ids</groupId>
			<artifactId>core</artifactId>
			<version>${ids-components.version}</version>
		</dependency>
		<dependency>
			<groupId>de.fraunhofer.iais.eis.ids</groupId>
			<artifactId>ecosystemintegration</artifactId>
			<version>${ids-components.version}</version>
		</dependency>
		<dependency>
			<groupId>de.fraunhofer.iais.eis.ids</groupId>
			<artifactId>connector-commons</artifactId>
			<version>${ids-components.version}</version>
		</dependency>
		<dependency>
			<groupId>de.fraunhofer.iais.eis.ids</groupId>
			<artifactId>protocol</artifactId>
			<version>${ids-components.version}</version>
		</dependency>
		<dependency>
			<groupId>de.fraunhofer.iais.eis.ids</groupId>
			<artifactId>connector-client</artifactId>
			<version>${ids-components.version}</version>
		</dependency>

		<!-- IDS Infomodel Java Lib -->
		<dependency>
			<groupId>de.fraunhofer.iais.eis.ids.infomodel</groupId>
			<artifactId>java</artifactId>
			<version>${ids-infomodel.version}</version>
		</dependency>

		<!-- IDS Serialiser and Validator -->
		<dependency>
			<groupId>de.fraunhofer.iais.eis.ids</groupId>
			<artifactId>infomodel-serializer</artifactId>
			<version>${ids-serializer.version}</version>
		</dependency>
		<dependency>
			<groupId>de.fraunhofer.iais.eis.ids.infomodel</groupId>
			<artifactId>validation-serialization-provider</artifactId>
			<version>${ids-serializer.version}</version>
		</dependency>


		<!-- Spring -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring-boot.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>9.4.29.v20200521</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.11.0</version>
		</dependency>


		<!-- Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>${spring-boot.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.6</version>
			</plugin>
		</plugins>
	</reporting>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring-boot.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
						<configuration>
							<mainClass>de.fraunhofer.iais.eis.ids.connector.main.Main</mainClass>
							<outputDirectory>docker/mdm-connector</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>${project.basedir}/docker/mdm-connector</directory>
							<includes>
								<include>**/*.jar</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>


			<!-- run DemoClient by mvn exec:java -Dexec.args="connector artifact" -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>de.fraunhofer.iais.eis.ids.mdmconnector.client.DemoClient</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>eis-public-repo</id>
			<name>maven-public</name>
			<url>http://maven.iais.fraunhofer.de/artifactory/eis-ids-public</url>
		</repository>
	</repositories>
</project>
